# caveat

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: package-build-test-cov.yml
demo_hack/: Device.py  Makefile  Makefile.cocotb  cocotb_tb.py  demo_runner.py  demo_sanimut.py  run_direct.sh  run_test_dac_adc.py  source_files.list  trxpc1_core
example/: requirements.txt  run_adder_client.py  run_adder_host.py  run_network_adder.py  run_tests.py
example/rtl/: adder.v  axis_adder.v  axis_adder_toplevel.v  axis_loopback.v
example/tests/: test_axis_fifo.py  test_axis_loopback.py
example/tests/axis_adder/: adding_sender.py  ethernet_axis.py  test_socket_adder.py
src/caveat/: Dynamic.py  augmented_handle.py  caveatbench.py  caveatmonitor.py  interface.py  iopin.py  plotting.py  report.py  util.py  xdc_parser.py  xilinx_package_spec.py
src/caveat/archive-deprecated/: sequence_checker.py
src/caveat/examples/axis_adder/: axis_adder.py
src/caveat/fileio/: netlist_parser.py  sequence_checker.py  verilog_parser.py  xdc_parser.py  xilinx_package_spec.py
src/caveat/forasteroext/: stream.py  testbench.py
src/caveat/interface/: socket_axis.py
src/caveat/physical/: __init__.py  adder.py  attenuator.py  delayline.py  loopback.py  simulation.py
src/caveat/rtl/: adder.v
src/caveat/tests/dynamic/: Makefile  adder_tb.py  test_axis_adder.py  test_fifo_example.py
src/caveat/tests/static/: test_all_iopins_constrained.py  test_io_pin_all_constrained.py  test_output_pin_current_drive_strength.py  (+3 more)
