[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caveat"
version = "0.1_dev"
authors = [
  { name="Torsten Reuschel", email="torsten.reuschel@unb.ca" },
]
description = "Context-Aware Verification, Emulation, and Training"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
