[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caveat"
version = "0.1"
authors = [
  { name="Torsten Reuschel", email="torsten.reuschel@unb.ca" },
  { name="Murray Ferris", email="murray.ferris2@unb.ca" },
]
description = "Context-Aware Verification, Emulation, and Training"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/caveat"]
